--- a/Assign4.ipynb
+++ b/Assign4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "source": [
     "def find_determinant(A):\r\n",
     "    M = A\r\n",
@@ -52,19 +52,19 @@
     "    return Nu\r\n",
     "\r\n",
     "def sub_FOW(L,v):\r\n",
-    "    r = len(L)\r\n",
-    "    X = null_matx(r,1)\r\n",
+    "    r = len(L) # Using, Ux=y and Ly=v, for Mx=v system of equations\r\n",
+    "    X = null_matx(r,1) \r\n",
     "    dum = 0\r\n",
-    "    for i in range(r):\r\n",
-    "        for j in range(i):\r\n",
-    "            dum += L[i][j]*X[j][0]\r\n",
-    "        X[i][0] = (v[i][0]-dum)*(1/L[i][i])\r\n",
+    "    for i in range(r): # iterating through rows\r\n",
+    "        for j in range(i): # iterating through columns\r\n",
+    "            dum += L[i][j]*X[j][0]  # dummy variable to use for the substitution step\r\n",
+    "        X[i][0] = (v[i][0]-dum)*(1/L[i][i])  # substitution\r\n",
     "    return X\r\n",
     "\r\n",
     "def sub_BACK(U,v):\r\n",
-    "    r = len(U)\r\n",
+    "    r = len(U) \r\n",
     "    X = null_matx(r,1)\r\n",
-    "    for i in range(r-1,-1,-1):\r\n",
+    "    for i in range(r-1,-1,-1): # reverse of the forward substitution order\r\n",
     "        dum = 0\r\n",
     "        for j in range(r-1,i,-1):\r\n",
     "            dum += U[i][j]*X[j][0]\r\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "source": [
     "# Doolittle's Method for solving a system of linear equations\r\n",
     "\r\n",
@@ -85,8 +85,8 @@
     "    r = len(M)\r\n",
     "    c = len(M[0])\r\n",
     "\r\n",
-    "    for i in range(r-1):\r\n",
-    "            for j in range(c):\r\n",
+    "    for i in range(r-1): # iterating through rows\r\n",
+    "            for j in range(c): # through columns\r\n",
     "                dum = 0\r\n",
     "                if i+1 <= j:\r\n",
     "                    for k in range(i+1):\r\n",
@@ -150,14 +150,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 147
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "source": [
     "# Crout's Method for solving a system of linear equations\r\n",
     "\r\n",
@@ -230,37 +230,74 @@
       ]
      },
      "metadata": {},
-     "execution_count": 148
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "source": [
-    "# Inverse by Doolittle\r\n",
+    "# Inverse\r\n",
     "\r\n",
     "h = [[0,2,8,6],[0,0,1,2],[0,1,0,1],[3,7,1,0]]\r\n",
-    "find_determinant(h)"
+    "def matx_inv(M):\r\n",
+    "    n = len(M) # dimension of the matrix\r\n",
+    "    P = [[0.0 for i in range(n)] for j in range(n)] # null matrix\r\n",
+    "    for i in range(3): # for a 3x3 matrix, the identity\r\n",
+    "        for j in range(3):\r\n",
+    "            P[j][j] = 1.0\r\n",
+    "    for i in range(n):\r\n",
+    "        M[i].extend(P[i])\r\n",
+    "    # Finding inverse through gaussian elimination\r\n",
+    "    for k in range(n):\r\n",
+    "        if abs(M[k][k]) < 1.0e-5:\r\n",
+    "            for i in range(k+1, n):\r\n",
+    "                if abs(M[i][k]) > abs(M[k][k]):\r\n",
+    "                    for j in range(k, 2*n):\r\n",
+    "                        M[k][j],M[i][j] = M[i][j], M[k][j] # placing the pivot\r\n",
+    "                    break\r\n",
+    "        pivot = M[k][k] # marking pivot\r\n",
+    "        if pivot == 0: # check step\r\n",
+    "            print(\"This matrix is not invertible.\")\r\n",
+    "            return\r\n",
+    "        else:\r\n",
+    "            for j in range(k, 2*n): # running through columns of pivot\r\n",
+    "                M[k][j] /= pivot\r\n",
+    "            for i in range(n): # rows of subtraction\r\n",
+    "                if i == k or M[i][k] == 0: continue\r\n",
+    "                factor = M[i][k]\r\n",
+    "                for j in range(k, 2*n): # columns of subtraction\r\n",
+    "                    M[i][j] -= factor * M[k][j]\r\n",
+    "    for i in range(n): # displaying the inverse matrix\r\n",
+    "        for j in range(n, len(M[0])):\r\n",
+    "            print(\"{:.2f}\".format(M[i][j]), end = \" \") # rounding up to decimal place 2 i.e. 0.01\r\n",
+    "        print()\r\n",
+    "\r\n",
+    "matx_inv(h)\r\n",
+    "\r\n",
+    "\r\n",
+    "    \r\n",
+    "\r\n"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "36.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 149
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-0.25 1.67 -1.83 0.00 \n",
+      "0.08 -0.67 0.83 0.00 \n",
+      "0.17 -0.33 -0.33 0.00 \n",
+      "-0.08 0.67 0.17 -0.00 \n"
+     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "source": [
     "# Cholesky Decomposition\r\n",
     "\r\n",
@@ -340,7 +377,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 144
+     "execution_count": 6
     }
    ],
    "metadata": {}
